[package]
name = "oil-and-vinegar"
version = "0.1.0"
authors = ["Gerald Lee <g77lee@uwaterloo.ca>"]
edition = "2021"
repository = "https://github.com/GeraldLeeDoesThings/oil-and-vinegar"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
ndarray = { version = "0.15.6", features = ["approx"] }
num-traits = "0.2.16"
rand = "0.8.5"
serde = { version = "1.0.194", features = ["derive"] }
sha3 = "0.10.8"

[dev-dependencies]
hex = "0.4.3"
